# collide-o-scope

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  requirements.txt  vdj-project-context.md
.config/: nextest.toml
.cursor/rules/: voice-and-tone.mdc  youtube-publishing.mdc
.github/workflows/: ci.yml
context/: COLOR-KEYING-APPROACHES.md  HOW-IT-WORKS.md  README.md  REFACTOR-PLAN.md
docs/: audio-plan.md  automation-controls-explorations.html  automation-editor.md  automation-ui-mockups.html  clip-cropping-design.md  effect-grouping-audit.md  feature-backlog.md  live-sync-postmortem.md  parameter-automation.md  preview-plugins-design.md  proposed-layer-effects.md  server-autopilot-plan.md  text-layer-design.md  vhs-performance-report.md  whiteboard.tldr
docs/blogs/: procedural-video-generation.md
docs/ui-ux/: index.html  (+2 more)
experiments/imgui-ui/: Cargo.toml
experiments/imgui-ui/src/: main.rs
patches/: blocky-warpy-thing.yaml  bone zone.yaml  bonjour.yaml  dan-deacon-1.yaml  dogs.yaml  feedback-strobe.yaml  korea.yaml  lady.yaml  moon-is-blue.yaml  red-swirl.yaml  test.yaml  the-ride.yaml  the-warp.yaml  wedding-flowers.yaml
presets/: README.md
projects/: README.md
qt-panel/: .gitignore  CMakeLists.txt
scripts/: README.md
src/: automation.rs  main.rs  render_export.rs  test_support.rs  text.rs
static/: app.js  index.html  matrix-schema.js  matrix.js  style.css
tests/: export_cli.rs
tools/: README.md  autopilot.py  batch-render.py  dashboard.py  download-source-material.py  setup-server.sh  upload-draft.py
(+94 files in other folders)
