[package]
name = "imgui-ui-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.12"
imgui-glow-renderer = "0.12"
imgui-winit-support = "0.12"
# Match versions expected by imgui-winit-support 0.12
winit = "0.29"
glow = "0.13"
glutin = "0.31"
glutin-winit = "0.4"
raw-window-handle = "0.5"
